--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,32 @@
     <string name="favourites_recipes">Favourites Recipes</string>
     <string name="settings">Settings</string>
     <string name="dish_name">Dish name</string>
-    <string name="time_servings">45 Minutes</string>
+    <string name="popular_category">Popular Category</string>
+    <string name="serving">Serving</string>
+    <string name="total_servings">2 Servings</string>
+    <string name="like">Like</string>
     <string name="total_likes">2 Likes</string>
-    <string name="servings">2 Servings</string>
+    <string name="time">Time</string>
+    <string name="time_servings">15 Mins</string>
+    <string name="classic_greek_salad">Classic Greek Salad</string>
+    <string name="see_all">See all ➜</string>
+    <string name="indonesian_chiken_burger">Indonesian chiken burger</string>
+    <string name="recent_recipe">Recent Recipe</string>
+
+    <string-array name="categories">
+        <item>Main Course</item>
+        <item>Side Dish</item>
+        <item>Dessert</item>
+        <item>Appetizer</item>
+        <item>Salad</item>
+        <item>Bread</item>
+        <item>Breakfast</item>
+        <item>Soup</item>
+        <item>Beverage</item>
+        <item>Sauce</item>
+        <item>Marinade</item>
+        <item>Fingerfood</item>
+        <item>Snack</item>
+        <item>Drink</item>
+    </string-array>
 </resources>
