[Task][66490] Handle Event UI for Home Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,19 +30,22 @@
     <string name="recent_recipe">Recent Recipe</string>
     <string name="loading">Loading…</string>
     <string-array name="categories">
-        <item>Main Course</item>
-        <item>Side Dish</item>
-        <item>Dessert</item>
-        <item>Appetizer</item>
-        <item>Salad</item>
-        <item>Bread</item>
-        <item>Breakfast</item>
-        <item>Soup</item>
-        <item>Beverage</item>
-        <item>Sauce</item>
-        <item>Marinade</item>
-        <item>Fingerfood</item>
-        <item>Snack</item>
-        <item>Drink</item>
+        <item>main course</item>
+        <item>side dish</item>
+        <item>dessert</item>
+        <item>appetizer</item>
+        <item>salad</item>
+        <item>bread</item>
+        <item>breakfast</item>
+        <item>soup</item>
+        <item>beverage</item>
+        <item>sauce</item>
+        <item>marinade</item>
+        <item>fingerfood</item>
+        <item>snack</item>
+        <item>drink</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="recipe_detail">Recipe Detail</string>
 </resources>
