--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="action_setting">Setting</string>
     <string name="find_best_recipes_for_cooking">Find Best Recipes For Cooking</string>
     <string name="favourites_recipes">Favourites Recipes</string>
+    <string name="no_favorite_recipes_saved_yet">No favorite recipes saved yet</string>
     <string name="settings">Settings</string>
     <string name="dish_name">Dish name</string>
     <string name="popular_category">Popular Category</string>
@@ -29,6 +30,7 @@
     <string name="indonesian_chiken_burger">Indonesian chiken burger</string>
     <string name="recent_recipe">Recent Recipe</string>
     <string name="loading">Loading…</string>
+    <string name="no_search_input">You have not entered anything yet…</string>
     <string-array name="categories">
         <item>main course</item>
         <item>side dish</item>
@@ -48,4 +50,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recipe_detail">Recipe Detail</string>
+    <string name="bookmark_recipe">Successfully bookmarked to favorite recipes list</string>
+    <string name="unmark_recipe">Successfully unmarked to favorite recipes list</string>
 </resources>
